styles/Explorer.css
@import '~antd/dist/antd.css';

body {
  background-color: black;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}
.infoboxshadow {
  box-shadow: 0px 47px 27px -24px rgba(9, 10, 19, 0.8);
}

.max-h-650px {
  max-height: 650px;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

#nprogress .spinner {
  display: block !important;
  position: absolute !important;
  z-index: 1031;
  left: calc(50% - 60px) !important;
  top: calc(50% - 75px) !important;
  background: rgba(95, 107, 131, 0.7) !important;
  backdrop-filter: blur(20px) !important;
  -webkit-backdrop-filter: blur(20px) !important;
  width: 120px !important;
  height: 150px !important;
  border-radius: 20px !important;
}

#nprogress .spinner-icon {
  width: 60px !important;
  position: absolute !important;
  height: 60px !important;
  box-sizing: border-box !important;
  left: calc(50% - 30px) !important;
  top: calc(50% - 30px) !important;
  border: solid 7px transparent !important;
  border-top-color: #fff !important;
  border-left-color: #fff !important;
  border-radius: 50% !important;

  -webkit-animation: nprogress-spinner 600ms linear infinite !important;
  animation: nprogress-spinner 600ms linear infinite !important;
}

.ant-card-loading-content {
  margin: 24px;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.light-reward-pill {
  background: #eaeefa !important;
}

.minicoveragemap {
  height: 900px;
}

.ant-card-body {
  padding: 0;
}

p.stat {
  color: white;
  margin: 0;
  margin-bottom: 3px;
  font-weight: 500;
}

.ant-tabs-tab {
  margin: 0 16px 0 16px;
}

p.stat span {
  color: white;
  margin-right: 10px;
  font-weight: 300;
  width: 170px;
  display: inline-block;
}

.ant-table.ant-table-small .ant-table-title,
.ant-table.ant-table-small .ant-table-footer,
.ant-table.ant-table-small .ant-table-thead > tr > th,
.ant-table.ant-table-small .ant-table-tbody > tr > td,
.ant-table.ant-table-small tfoot > tr > th,
.ant-table.ant-table-small tfoot > tr > td {
  padding: 12px 24px;
  white-space: nowrap;
}

.ant-table-tbody > tr > td {
  border-bottom: 1px solid #e9eaf2;
}

.ant-table-thead > tr > th,
.ant-table-tbody > tr > td,
.ant-table tfoot > tr > th,
.ant-table tfoot > tr > td {
  white-space: nowrap;
}

.barchart {
  transform: rotate(90deg);
  margin: 0px 0;
  display: inline-block;
  width: 100%;
  transform-origin: bottom right;
  position: absolute;
  margin-top: -100%;
  left: -200px;
  height: 850px;
  background: none;
  bottom: 0;
  max-width: 200px;
}

.barchart .ant-table-tbody > tr > td {
  background: none !important;
  padding: 2px 0 !important;
  border: none !important;
}

.barchart thead {
  display: none;
}

.barchart .ant-table {
  background: none;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.ant-layout-header {
  background: #1c1d3f;
  padding: 10px 20px;
  align-items: center;
}

.ant-layout {
  background: #e9eaf2;
}

.flexwrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.ant-table-small .ant-table-thead > tr > th {
  background-color: white;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 0px;
  font-size: 12px;
}

a.button {
  padding: 12px 30px;
  background: #383a64;
  border-radius: 6px;
  color: white;
  text-decoration: none;
  transition: all 0.2s ease;
  transform: scale(1);
  display: inline-block;
}

a.button:hover {
  transform: scale(1.05);
  background: #454677;
}

.ant-tag {
  font-size: 12px;
  border: none;
  font-weight: 600;
  padding: 2px 10px 3px;
  border-radius: 4px;
  min-width: 106px;
  text-align: center;
}

h3 {
  font-size: 12px;
  color: #ffffff;
  letter-spacing: 1.81px;
  font-weight: 400;
  text-transform: uppercase;
}

.ant-table-container table > thead {
  font-family: 'Inter', sans-serif;
}

.ant-table table {
  width: 100% !important;
  min-width: 685px !important;
}

.show-xs {
  display: none;
}

.ant-descriptions-bordered .ant-descriptions-view > table {
  table-layout: fixed;
}

.ant-layout-footer {
  background: #27284b;
}

.ant-table-thead > tr > th {
  border-bottom: 1px solid #e9eaf2;
}

.ant-table-override
  > .ant-table-wrapper
  > .ant-spin-nested-loading
  > .ant-spin-container
  > .ant-table.ant-table-small {
  margin: 0;
}

.ant-table-cell-override > p {
  font-family: monospace;
}

hr {
  border: none;
  width: 100%;
  border-top: 1px solid #494b7b;
  margin: 40px 0;
}

.logo-small {
  display: none;
}

.logo-container {
  margin-right: 20px;
}

.map-button {
  min-width: 127px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 17px;
}

tr.ant-table-expanded-row-level-1 > td.ant-table-cell {
  padding: 0 !important;
}

.ant-descriptions-item-content p {
  display: table-cell;
}

.proof {
  padding-bottom: 12px;
  word-break: break-all;
}

.summarycardmaintitle {
  font-weight: 300;
  font-size: 46px;
  color: #262625;
}

.summarycardheader {
  text-transform: uppercase;
  font-size: 12px;
  color: #6d6ea0;
  margin: 0;
}

.block-view-summary-container {
  margin-top: 100px;
}

.summary-header > .ant-row > .ant-col-lg-12 {
  padding: 16px 24px;
}
.content-container {
  padding: 60px 20px 30px 20px;
}
.content-container-hotspot-view {
  padding: 0px 20px 20px 20px;
}
.content-container-txn-view {
  padding: 60px 20px 30px 20px;
}
.content-container-account-view {
  padding: 80px 20px 50px 20px;
}

.unselectable-text {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.mini-beacon-map {
  position: relative;
  display: block;
}
/* ... */

